# mario-kart-rl

./: .gitignore  CLAUDE.md  README.md  agent.py  config.py  dashboard.py  ecosystem.config.js  env.py  evaluate.py  program.md  pyproject.toml  ralph-prompt.md  records.json  train.py
retro_data/SuperMarioKart-Snes/: data.json  metadata.json  scenario.json  script.lua
scripts/: create_state.py
src/mariokart/: __init__.py  agent.py  config.py  dashboard.py  env.py  evaluate.py  telemetry.py  train.py
